# doit-cli

./: .cursorrules  .devcontainer.json  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: args.rs  cli.rs  error.rs  lib.rs  main.rs  progress.rs  progress_bar.rs  style.rs  theme.rs  timespan.rs
src/renderer/: default_renderer.rs  hourglass_renderer.rs  mod.rs  retro_renderer.rs  styled_renderer.rs  synthwave_renderer.rs
