[package]
name = "doit"
version = "0.9.3"
edition = "2021"
authors = ["Shuhei Matsuoka <matsuokashuheiii@gmail.com>"]
description = "A CLI progress monitor (doit) for time-based visualization"
license = "MIT"
repository = "https://github.com/matsuokashuhei/doit"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "string"] }
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
crossterm = "0.29.0"
anyhow = "1.0.99"
thiserror = "2.0.16"
regex = "1.11.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
unicode-width = "0.1.14"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.21.0"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "doit"
path = "src/main.rs"
